# EpsilonEditor

./: .gitmodules  CMakeLists.txt  FileHelper.cpp  FileHelper.h  README.md  ShaderBuffer.cpp  ShaderManager.cpp  main.cpp
Examples/: 3am.glsl  CubeHelix.glsl  CubeSpin.glsl  Fractal.glsl  Frums.glsl  SpikedMandelbulb.glsl  intro.glsl
lib/: CMakeLists.txt
lib/glad/include/glad/: gl.h
src/: App.cpp  App.h  Buffer.cpp  Buffer.h  ContextManager.cpp  ContextManager.h  FileHelper.cpp  FileHelper.h  ImGuiEnvironment.cpp  ImGuiEnvironment.h  ImGuiHandler.cpp  ImGuiHandler.h  Shader.h  ShaderBuffer.h  ShaderManager.cpp  ShaderManager.h  Texture.cpp  Texture.h  UniformData.h  UniformDataBlock.h  UniformManager.cpp  UniformManager.h  Window.cpp  Window.h
